Plain text inside c sharp razor code

--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -4,4 +4,8 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
+@{
+    <text> Hello World</text>
+}
+
 <p>Use this area to provide additional information.</p>
