--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Enums", "Index", "courseenums")</li>
+                    <li>@Html.ActionLink("TestPartial", "Index", "Song")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
