--- a/WebApplication3/Views/CourseEnums/Index.cshtml
+++ b/WebApplication3/Views/CourseEnums/Index.cshtml
@@ -6,8 +6,10 @@
 <h2>Index</h2>
 
 <form method="post">
+
     @Model.Error
     @Html.Raw(@Model.Error)
+    @Html.DisplayNameFor(model => model.OptionSelected)
     @Html.EnumDropDownListFor(model => model.OptionSelected)
     <input type="submit" value="Send" />
 </form>
