Add (prepend) html content to all the html content dynamically based on class

--- a/WebApplication3/Views/Shared/_AdminMenuPartial.cshtml
+++ b/WebApplication3/Views/Shared/_AdminMenuPartial.cshtml
@@ -10,7 +10,7 @@
         
         <li class="divider" />
         
-        <li><a href="/Admin/Section">&nbsp;&nbsp;Section</a></li>
+        <li><a href="/Song/Index">&nbsp;&nbsp;Prepend</a></li>
         
         <li><a href="/Admin/Part">&nbsp;&nbsp;Part</a></li>
         
