Dropdown using html helper

--- a/WebApplication3/Views/Shared/_AdminMenuPartial.cshtml
+++ b/WebApplication3/Views/Shared/_AdminMenuPartial.cshtml
@@ -12,7 +12,7 @@
         
         <li><a href="/Song/Index">&nbsp;&nbsp;Prepend</a></li>
         
-        <li><a href="/Admin/Part">&nbsp;&nbsp;Part</a></li>
+        <li><a href="/Dropdown/Index">&nbsp;&nbsp;Dropdown</a></li>
         
         <li><a href="/Admin/ItemType">&nbsp;&nbsp;Item Type</a></li>
         
