--- a/WebApplication3/Views/DropDown/Index.cshtml
+++ b/WebApplication3/Views/DropDown/Index.cshtml
@@ -7,5 +7,17 @@
 
 <form method="post">
     @Html.DropDownListFor(m => m.Id, Model.SongList, "", new { @class = "form-control" })
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(m => m.Name)
+
+
+        </dt>
+        <dd>
+            @Html.DisplayFor(m => m.Name)
+
+
+        </dd>
+    </dl>
     <input type="submit" value="Send" />
 </form>
