Display Currency symbol on model property

--- a/WebApplication3/Views/DropDown/Index.cshtml
+++ b/WebApplication3/Views/DropDown/Index.cshtml
@@ -14,6 +14,12 @@
         <dd>
             @Html.DisplayFor(m => m.Name)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(m => m.RateInDollar)
+        </dt>
+        <dd>
+            @Html.DisplayFor(m => m.RateInDollar)
+        </dd>
     </dl>
     <input type="submit" value="Send" />
 </form>
