Client side validation

--- a/WebApplication3/Views/Shared/_AdminMenuPartial.cshtml
+++ b/WebApplication3/Views/Shared/_AdminMenuPartial.cshtml
@@ -14,7 +14,7 @@
         
         <li><a href="/Dropdown/Index">&nbsp;&nbsp;Dropdown</a></li>
         
-        <li><a href="/Admin/ItemType">&nbsp;&nbsp;Item Type</a></li>
+        <li><a href="/user/create">&nbsp;&nbsp;Form</a></li>
         
         <li><a href="/Admin/ProductType">&nbsp;&nbsp;Product Type</a></li>
         
