--- a/WebApplication3/Views/User/Create.cshtml
+++ b/WebApplication3/Views/User/Create.cshtml
@@ -13,12 +13,12 @@
     <div class="form-horizontal">
         <h4>UserModel</h4>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(true, "", new { @class = "text-danger " })
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Name, "", new{ @class = "text-danger" })
             </div>
         </div>
 
@@ -26,7 +26,7 @@
             @Html.LabelFor(model => model.Age, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Age, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Age, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Age, "", new{ @class = "text-danger" })
             </div>
         </div>
 
@@ -41,3 +41,8 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts
+{
+@Scripts.Render("~/bundles/jqueryval")
+}
