--- a/WebApplication3/Views/User/Create.cshtml
+++ b/WebApplication3/Views/User/Create.cshtml
@@ -42,7 +42,7 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@section Scripts
+@*@section Scripts
 {
 @Scripts.Render("~/bundles/jqueryval")
-}
+}*@
