Anonymous Object, querystring, no hidden values, pass data to different backend controller

--- a/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/Views/Home/Index.cshtml
@@ -30,3 +30,5 @@
     </div>
 </div>
 <a href="@Url.Action("Index", "Home")" class="btn btn-primary btn-block margin-top-20">Click Me! </a>
+
+<a href="@Url.Action("Create", "Order", new {ApplicationUserId = ViewBag.userId })">&nbsp;&nbsp;Order</a>
