--- a/WebApplication3/Views/Shared/_AdminMenuPartial.cshtml
+++ b/WebApplication3/Views/Shared/_AdminMenuPartial.cshtml
@@ -15,8 +15,9 @@
         <li><a href="/Dropdown/Index">&nbsp;&nbsp;Dropdown</a></li>
         
         <li><a href="/user/create">&nbsp;&nbsp;Form</a></li>
+            
         
-        <li><a href="/Admin/ProductType">&nbsp;&nbsp;Product Type</a></li>
+        <li><a href="@Url.Action("Create", "Order", new {userId = ViewBag.userId })">&nbsp;&nbsp;Order</a></li>
         
         <li><a href="/Admin/ProductLinkText">&nbsp;&nbsp;Product Link Text</a></li>
         
