LINQ, IEnummerable, ToList, Get all the records from a DBSet and Display

--- a/WebApplication3/Views/Shared/_AdminMenuPartial.cshtml
+++ b/WebApplication3/Views/Shared/_AdminMenuPartial.cshtml
@@ -17,7 +17,7 @@
         <li><a href="/user/create">&nbsp;&nbsp;Form</a></li>
             
         
-        <li><a href="@Url.Action("Create", "Order", new {userId = ViewBag.userId })">&nbsp;&nbsp;Order</a></li>
+        <li><a href="@Url.Action("Create", "Order", new {applicationUserId = ViewBag.userId })">&nbsp;&nbsp;Order</a></li>
         
         <li><a href="/Admin/ProductLinkText">&nbsp;&nbsp;Product Link Text</a></li>
         
