--- a/WebApplication3/Views/Home/ListOfAllUser.cshtml
+++ b/WebApplication3/Views/Home/ListOfAllUser.cshtml
@@ -25,6 +25,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Email)
         </th>
+        <th></th>
     </tr>
 
     @foreach (var item in Model)
@@ -32,6 +33,11 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
+            </td>
+
+
+            <td>
+                @Html.ActionLink("Details", "DetailsForAdmin", new {id = item.Id })
             </td>
         </tr>
     }
