ActionLink button and passing anonymous value

--- a/WebApplication3/Views/Home/ListOfAllUser.cshtml
+++ b/WebApplication3/Views/Home/ListOfAllUser.cshtml
@@ -37,6 +37,7 @@
 
 
             <td>
+                @*Action link and passing anonymouns object or value on the fly ON THE BUTTON CLICK*@
                 @Html.ActionLink("Details", "DetailsForAdmin", new {id = item.Id })
             </td>
         </tr>
