--- a/WebApplication3/Views/Shared/_AdminMenuPartial.cshtml
+++ b/WebApplication3/Views/Shared/_AdminMenuPartial.cshtml
@@ -43,11 +43,11 @@
         
         <li class="divider" />
         
-        <li class="dropdown-header">Users & Subscriptions</li>
+        <li class="dropdown-header">Users & Subscription</li>
         
         <li class="divider" />
         
-        <li><a href="/Account">&nbsp;&nbsp;Users & Subs</a></li>
+        <li><a href="/Song/Index">&nbsp;&nbsp;Child Selector</a></li>
         
     </ul>
     
