JQuery-Child Selector-select class instance under a specific class and ignore rest of the same class instance

--- a/WebApplication3/Views/Shared/_AdminMenuPartial.cshtml
+++ b/WebApplication3/Views/Shared/_AdminMenuPartial.cshtml
@@ -47,7 +47,7 @@
         
         <li class="divider" />
         
-        <li><a href="/Song/Index">&nbsp;&nbsp;Child Selector</a></li>
+        <li><a href="/Song/ChildSelector">&nbsp;&nbsp;Child Selector</a></li>
         
     </ul>
     
