JQuery-ChildSelector-RemoveClass-AddClass-remove a class instance under a specific class and add another class there

--- a/WebApplication3/Views/Song/ChildSelector.cshtml
+++ b/WebApplication3/Views/Song/ChildSelector.cshtml
@@ -6,6 +6,7 @@
 <h2>Song</h2>
 <style>
 .b {color:red}
+.d {color:blue}
 </style>
 
 <div class="a">
@@ -21,6 +22,6 @@
     </div>
 </div>
 <script>
-    $(".a>.b").removeClass("b")
+    $(".a>.b").removeClass("b").addClass("d")
 
 </script>
