TempData - pass data among consecutive controller request

--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -8,4 +8,13 @@
     <text> Hello World</text>
 }
 
+@*available in second request*@
+@{ 
+    string data;
+    if (TempData["User"] != null)
+    {
+        data = TempData["User"] as string;
+    }
+}
+ 
 <p>Use this area to provide additional information.</p>
