nth-Child(1)-add css styles to specific child element

--- a/WebApplication3/Views/Song/songname.cshtml
+++ b/WebApplication3/Views/Song/songname.cshtml
@@ -1,8 +1,8 @@
 ﻿<style>
-   .abc>li:nth-child(odd) {
+   .abc>li:nth-child(1) {
     background: red;
 } 
-      .abc>li:nth-child(even) {
+      .abc>li:nth-child(2) {
     background: blue;
 } 
 </style>
