Custom Action Filter,onActionExecuting based on each action seperately

--- a/WebApplication3/Views/Song/index.cshtml
+++ b/WebApplication3/Views/Song/index.cshtml
@@ -4,7 +4,6 @@
 }
 
 <h2>Song</h2>
-
+@*@Html.Action("Show", "Home", new { text = "hello world" })*@
 @Html.Partial("songname")
 
-@Html.Action("Show", "Home", new { text = "hello world"})
