--- a/WebApplication3/Views/DropDown/Index.cshtml
+++ b/WebApplication3/Views/DropDown/Index.cshtml
@@ -13,30 +13,53 @@
 <form method="post">
     @Html.DropDownListFor(m => m.Id, Model.SongList, "", new { @class = "form-control" })
     @*here name = classtest should be the property that should match in the model*@
-    <select id="idtest" name="classtest">
+    <select id="idselect" name="classselect" onchange="makeajaxcall()">
         <option value="1">One</option>
         <option value="2">Two</option>
-        <option value="3">Three</option>
-        <option value="4">Four</option>
-        <option value="5">Five</option>
-    </select>
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(m => m.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(m => m.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(m => m.RateInDollar)
-        </dt>
-        <dd>
-            @Html.DisplayFor(m => m.RateInDollar)
-        </dd>
-    </dl>
-    <p style="display:none">@Model.test</p>
-    <input type="submit" value="Send" />
+        </select>
+        <select id="idtest" name="classtest"></select>
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(m => m.Name)
+            </dt>
+            <dd>
+                @Html.DisplayFor(m => m.Name)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(m => m.RateInDollar)
+            </dt>
+            <dd>
+                @Html.DisplayFor(m => m.RateInDollar)
+            </dd>
+        </dl>
+        <p style="display:none">@Model.test</p>
+        <input type="submit" value="Send" />
 </form>
 <script>
     $("p").show();
+</script>
+<script>
+    function makeajaxcall()
+    {
+        //get the selected value from the dropdown
+        var idselect = $('#idselect').val() 
+        $.ajax({
+            type: 'POST',
+            url: '/DropDown/hello',
+            data: { id: idselect },
+            success: function (data) {
+                //now here we are getting the json data, we will create a dropdown here dynamically
+                var markup = '';
+                for (var x = 0; x < data.length; x++)
+                {
+                    markup += '<option value="' + data[x].Value+'">' + data[x].Text +  '</option>'
+                }
+                //now here we created the dropdown explicilty now we need to put this entire htm content to the empty dropdown tag that we have created namely "idtest"
+                $("#idtest").html(markup);
+            },
+            error: function () {
+                alert("sadfsdf");
+            }
+        });
+    }
 </script>
