--- a/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/Views/Home/Index.cshtml
@@ -32,3 +32,16 @@
 <a href="@Url.Action("Index", "Home")" class="btn btn-primary btn-block margin-top-20">Click Me! </a>
 
 <a href="@Url.Action("Create", "Order", new {ApplicationUserId = ViewBag.userId })">&nbsp;&nbsp;Order</a>
+
+
+<select id="idselect" name="classselect" onchange="makeajaxcall()">
+    <option value="1">One</option>
+    <option value="2">Two</option>
+</select>
+<script>
+    function makeajaxcall() {
+        //get the selected value from the dropdown
+        var idselect = $('#idselect').val()
+        alert(idselect);
+    }
+</script>
