--- a/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/Views/Home/Index.cshtml
@@ -2,6 +2,10 @@
     ViewBag.Title = "Home Page";
 }
 
+<script>
+    var r =  @((int)WebApplication3.Controllers.Hello.sim)
+</script>
+
 <div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
@@ -46,5 +50,7 @@
         var markup = '';
         markup = '<h1> This is html content using .html() dynamically.</h1>';
         $("#update").html(markup);
+        alert(r);
     }
+   
 </script>
