Confirm Pop up message javascript onclick event

--- a/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/Views/Home/Index.cshtml
@@ -77,3 +77,9 @@
         });
     }
 </script>
+
+@using(Html.BeginForm("About","Home"))
+{
+<input type="submit" value="Submit" onclick="return confirm('Are you sure you want to delete?')"/> 
+}
+
