--- a/WebApplication3/Views/Company/Display.cshtml
+++ b/WebApplication3/Views/Company/Display.cshtml
@@ -33,6 +33,15 @@
             @Html.DisplayFor(model => model.EmailAddress)
         </dd>
 
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Url)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Url)
+        </dd>
+
     </dl>
 </div>
 <p>
