--- a/WebApplication3/Views/Genre/Create.cshtml
+++ b/WebApplication3/Views/Genre/Create.cshtml
@@ -46,7 +46,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.SongDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SongDate, new { htmlAttributes = new { @class = "form-control date-picker" } })
+                @Html.EditorFor(model => model.SongDate, new { htmlAttributes = new { @class = "form-control date-picker", onkeydown = "return false", onpaste = "return false" } })
                 @Html.ValidationMessageFor(model => model.SongDate, "", new { @class = "text-danger" })
             </div>
         </div>
