--- a/WebApplication3/Views/Genre/Create.cshtml
+++ b/WebApplication3/Views/Genre/Create.cshtml
@@ -10,13 +10,18 @@
 <script type="text/javascript">
     $(function () {
         $(".date-picker").datepicker({
-            dateFormat: 'dd-M-yy'
+            dateFormat: 'dd-M-yy',
+            minDate: '05-Jan-17',
+            maxDate: '05-Aug-17'
         });
 
+        $(".date-picker").datepicker("option", "minDate", new Date("01-05-2017"));
+        $(".date-picker").datepicker("option", "maxDate", new Date("08-05-2017"));
+
+
+
     });
-    $(".date-picker").click(function () {
-        alert("Handler for .click() called.");
-    });
+
 
 </script>
 @using (Html.BeginForm()) 
