--- a/WebApplication3/Views/Genre/Index.cshtml
+++ b/WebApplication3/Views/Genre/Index.cshtml
@@ -18,16 +18,7 @@
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-    </tr>
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.SongDate)
-        </td>
-    </tr>
+    @Html.Partial("_AllGenre", item)
 }
 
 </table>
