String literal text inside C#

--- a/WebApplication3/Views/Genre/Index.cshtml
+++ b/WebApplication3/Views/Genre/Index.cshtml
@@ -26,4 +26,13 @@
 @for(var i =0;i<10;i++)
 {
     <b>@i</b>
+    if(i%2 ==0)
+    {
+        @:Even
+    }
+    else
+    {
+        <text>Odd </text>
+    }
+    <br />
 }
