Append JQuery Dynamically adding the elements

--- a/WebApplication3/Views/Genre/Index.cshtml
+++ b/WebApplication3/Views/Genre/Index.cshtml
@@ -41,3 +41,11 @@
     int v = 2;
 }
 Value of v is @v
+
+
+<h2> Dynamic tags below</h2>
+
+<script>
+    $("h2").append("<p>hello from paragraph </p>");
+</script>
+
