--- a/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 @{
     ViewBag.Title = "Home Page";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Temp.cshtml";
     
 }
 
