Jquery,FIRST select just the first element in the entire DOM

--- a/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/Views/Home/Index.cshtml
@@ -88,3 +88,19 @@
 <input type="submit" value="Submit" onclick="return confirm('Are you sure you want to delete?')"/> 
 }
 
+
+<div class="parent">
+    one
+</div>
+
+<div class="parent">
+    two
+</div>
+
+<script>
+    $(".parent:first").click(function()
+    {
+        alert("clciked");
+    });
+</script>
+
