--- a/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/Views/Home/Index.cshtml
@@ -8,7 +8,13 @@
     Layout = "~/Views/Shared/_Temp.cshtml";
     
 }
-
+        <style>
+        @@media screen and (max-width: 600px) {
+            img {
+                width: 100%;
+            }
+        }
+    </style>
 <script>
     var r =  @((int)WebApplication3.Controllers.Hello.sim)
 </script>
@@ -19,27 +25,7 @@
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+
 <a href="@Url.Action("Index", "Home")" class="btn btn-primary btn-block margin-top-20">Click Me! </a>
 
 <a href="@Url.Action("Create", "Order", new {ApplicationUserId = ViewBag.userId })">&nbsp;&nbsp;Order</a>
@@ -104,3 +90,4 @@
     });
 </script>
 
+<img src="~/Content/themes/base/images/logo.png" />
