Best Practice,ass namespace in web.config file if getting used in most of the view files

--- a/WebApplication3/Views/Home/Shows.cshtml
+++ b/WebApplication3/Views/Home/Shows.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<WebApplication3.Models.MyViewModel>
+@*@model Order*@
 
 <table>
     <tr><th>Department</th><th>Count</th></tr>
