--- a/WebApplication3/Views/Order/Create.cshtml
+++ b/WebApplication3/Views/Order/Create.cshtml
@@ -1,5 +1,7 @@
-﻿@model WebApplication3.Models.Order
+﻿@model Order
 
+
+@* In case we want to use some files bwlongign to a particualr namespace in many CSHTML Files then in that case we can simply add that namespace in web.config file, because if we dont do that then we will need to iclude that particular namespace in all the view models files. *@
 @{
     ViewBag.Title = "Create";
 }
