Jquery id selector

--- a/WebApplication3/Views/City/List.cshtml
+++ b/WebApplication3/Views/City/List.cshtml
@@ -44,3 +44,9 @@
     <input type="submit" value="Submit" />
 
 }
+<div id="foo">hell</div>
+<script>
+    $("#foo").click(function () {
+        alert("id selector");
+    });
+</script>
