--- a/WebApplication3/Views/City/List.cshtml
+++ b/WebApplication3/Views/City/List.cshtml
@@ -44,9 +44,9 @@
     <input type="submit" value="Submit" />
 
 }
-<div id="foo">hell</div>
+<div class="fooq">hell</div>
 <script>
-    $("#foo").click(function () {
-        alert("id selector");
+    $(".fooq").click(function () {
+        alert("class selector");
     });
 </script>
