--- a/WebApplication3/Views/City/List.cshtml
+++ b/WebApplication3/Views/City/List.cshtml
@@ -41,7 +41,7 @@
         }
 
     </table>
-    <input type="submit" value="Submit" />
+    <input type="submit" value="Delete" id="btn-submit" />
 
 }
 <div class="fooq">hell</div>
@@ -78,5 +78,18 @@
         else {
             $("#checkAll").removeAttr("checked");
         }
+    });
+</script>
+
+<script>
+    $("#btn-submit").click(function () {
+        if( $("input[name='listOfCityIdToDelete']:checked").length == 0 )
+        {
+            var count = $("input[name='listOfCityIdToDelete']").length;
+            if (count == 0) {
+                alert("No rows selected tp delete");
+                return false; // this is important. if it returns false it does not allow form to get submitted.
+            }
+
     });
 </script>
