--- a/WebApplication3/Views/Shared/Error.cshtml
+++ b/WebApplication3/Views/Shared/Error.cshtml
@@ -7,3 +7,7 @@
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
+@Model.ActionName
+@Model.ControllerName
+
+@* Make sure to set custome error mode to on in web.config file  *@
