Jquery css style

--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -16,5 +16,10 @@
         data = TempData["User"] as string;
     }
 }
- 
+<div> colour</div>
+ asas
 <p>Use this area to provide additional information.</p>
+<script>
+    $("div").css({ "background-color": "red" });
+</script>
+
