--- a/WebApplication3/Views/Home/Contact.cshtml
+++ b/WebApplication3/Views/Home/Contact.cshtml
@@ -15,3 +15,8 @@
     <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
+<div class="hm"> colour</div>
+<script>
+    $(".hm").css({ "background-color": "red" });
+</script>
+
