--- a/WebApplication3/Views/Form/Create.cshtml
+++ b/WebApplication3/Views/Form/Create.cshtml
@@ -5,14 +5,14 @@
 }
 
 <h2>Create</h2>
-
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-    
     <div class="form-horizontal">
         <h4>Form</h4>
         <hr />
+
+        @* first parameter false means show all the error on top *@
         @Html.ValidationSummary(false, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -26,6 +26,7 @@
             @Html.LabelFor(model => model.age, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.age, new { htmlAttributes = new { @class = "form-control" } })
+                @*star meaning show the star sign to keep show field required.  *@
                 @Html.ValidationMessageFor(model => model.age, "*", new { @class = "text-danger" })
             </div>
         </div>
@@ -37,8 +38,11 @@
         </div>
     </div>
 }
-
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-@Scripts.Render("~/bundles/jqueryval")
+
+@section Scripts
+ {
+ @Scripts.Render("~/bundles/jqueryval")
+ }
