Fixed issue Client side validation, error header message on top

--- a/WebApplication3/Views/Form/Create.cshtml
+++ b/WebApplication3/Views/Form/Create.cshtml
@@ -3,7 +3,11 @@
 @{
     ViewBag.Title = "Create";
 }
-
+<style>
+    .validation-summary-valid {
+    display:none;
+}
+</style>
 <h2>Create</h2>
 @using (Html.BeginForm()) 
 {
@@ -13,7 +17,7 @@
         <hr />
 
         @* first parameter false means show all the error on top *@
-        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(false,"Fix below error", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -38,11 +42,8 @@
         </div>
     </div>
 }
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
-@section Scripts
+@*@section Scripts
  {
  @Scripts.Render("~/bundles/jqueryval")
- }
+ }*@
