Render Partial View via Ajax GET Call

--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -7,9 +7,10 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     
-
+  
 </head>
 @Scripts.Render("~/bundles/jquery")
+
 
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -67,3 +68,5 @@
 <script>
     window.jQuery || document.write('<script src="locastion of loca jquery file">\x3C/script>')
 </script>
+@* This package is important *@
+<script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
