--- a/WebApplication3/Views/Home/PartialViewContainer.cshtml
+++ b/WebApplication3/Views/Home/PartialViewContainer.cshtml
@@ -7,19 +7,25 @@
             @Ajax.ActionLink("All", "All", new AjaxOptions{
                 HttpMethod = "GET",
                 UpdateTargetId = "divStudents",
-                InsertionMode = InsertionMode.Replace
+                InsertionMode = InsertionMode.Replace,
+                LoadingElementId = "divLoading"
             })
             <span style="color:Blue">|</span>
             @Ajax.ActionLink("Top3", "Top3", new AjaxOptions{
             HttpMethod = "GET",
             UpdateTargetId = "divStudents",
+                LoadingElementId = "divloading",
             InsertionMode = InsertionMode.Replace
         })
             <span style="color:Blue">|</span>
             @Ajax.ActionLink("Bottom", "Bottom3", new AjaxOptions{
             HttpMethod = "GET",
             UpdateTargetId = "divStudents",
-            InsertionMode = InsertionMode.Replace
+            InsertionMode = InsertionMode.Replace,
+                LoadingElementId = "divloading"
         })
+    <div id="divLoading" style="display:none">
+        <img src="~/Content/themes/base/images/spinner.gif" />
+    </div>
   <div id="divStudents"></div>
 </div>
