--- a/WebApplication3/Views/Shared/_Student.cshtml
+++ b/WebApplication3/Views/Shared/_Student.cshtml
@@ -3,7 +3,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table" style="border: 1px solid black; background-color: silver">
+<table class="table" id="studentstable"style="border: 1px solid black; background-color: silver">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
